--- a/src/config/default_api.conf
+++ b/src/config/default_api.conf
@@ -174,6 +174,8 @@ draw_trump_reward = 0.05
 draw_trump_penalty = 0.1
 # We can filter away play, that is not suggested by the neural network. 
 trust_NN = 0.0
+# When 3 cards left we check if any of the remaing card should have been played earlier for each sample. If so we reduce probability
+check_remaining_cards = True
 
 [pimc]
 # Setting this to false will suppress output from PIMC, if true it will follow the global defintion of verbose
@@ -228,7 +230,7 @@ hcp_reduction_factor = 0.83
 # when a card is given subtract this from the shape, to reduce odds it get more in that suit            
 shp_reduction_factor = 0.3
 # If bid selected directly by Neural net, then save time dropping generating samples
-no_samples_when_no_search = True
+no_samples_when_no_search = False
 # Filter to remove hands, where the opening lead was not suggested by the neural network
 # setting the following to false is the default behavior from a 32 card deck
 # lead_accept_threshold_suit will sum all lead, including honors, for each suit and check the suit lead, adding up the score
