--- a/src/config/MvsM/BEN-Robo.conf
+++ b/src/config/MvsM/BEN-Robo.conf
@@ -174,6 +174,8 @@ draw_trump_reward = 0.05
 draw_trump_penalty = 0.1
 # We can filter away play, that is not suggested by the neural network. 
 trust_NN = 0.0
+# When 3 cards left we check if any of the remaing card should have been played earlier for each sample. If so we reduce probability
+check_remaining_cards = True
 
 [pimc]
 # Setting this to false will suppress output from PIMC, if true it will follow the global defintion of verbose
