--- a/src/config/default.conf
+++ b/src/config/default.conf
@@ -16,7 +16,7 @@ NS = 1
 EW = 1
 # If using BBA the following NS and EW must match BBA's systems (0 =2/1, 1=SAYC, 2=WJ, 3=PC, 4=Acol)
 use_bba = False
-consult_bba = False
+consult_bba = True
 use_bba_rollout = True
 # Instead of the neural network, check BBA if it is RKC and get the correct bid from BBA
 use_bba_to_count_aces = True
@@ -150,7 +150,7 @@ sample_hands_play = 200
 # Minimum number of boards we want returned for sampling during play
 min_sample_hands_play = 20
 # Minimum number of boards we want returned for sampling during play
-min_sample_hands_play_bad = 12
+min_sample_hands_play_bad = 6
 # Number of samples we will generate to find sample_hands_play
 sample_boards_for_play = 5000
 # Should possible claim be calculated
@@ -252,7 +252,7 @@ lead_accept_threshold = 0.10
 # Setting it to high will reduce the samples and thus getting bad samples
 lead_accept_threshold_partner_trust = 0.10
 
-# Filter to remove hands, where we do not trust the bidding. Used when sampling hands during bidding
+# Filter to remove hands, where we do not trust the bidding. Used when sampling hands during bidding and opening lead
 #use_distance = False
 #bidding_threshold_sampling = 0.25
 #bid_accept_threshold_bidding = 0.20
@@ -274,7 +274,7 @@ play_accept_threshold_partner = 0.1
 play_accept_threshold_declarer = 0.1
 min_play_accept_threshold_samples = 10
 # If we dont find enough samples, then include down to this threshold. Used during play
-bid_extend_play_threshold = 0.10
+bid_extend_play_threshold = 0.01
 # Number hands where we will calculate scores for when bidding
 sample_hands_auction = 200
 # The number of hands we will generate to find sample_hands_auction. Estimated cost pr. sample is 4ms
@@ -296,6 +296,6 @@ sample_hands_opening_lead = 200
 # Max number of samples to include when reviewing a board
 sample_hands_for_review = 20
 # If probability for a bid is below this, then drop the sample
-exclude_samples = 0.005
+exclude_samples = 0.01
 # Skip last bidding round to find samples, if we did not find the minimum needed. We will only try to find 25% samples
 sample_previous_round_if_needed = True
