--- a/src/config/TF1.x/GIB.conf
+++ b/src/config/TF1.x/GIB.conf
@@ -137,6 +137,8 @@ pimc_wait = 3
 # When should PIMC kick in
 pimc_start_trick_declarer = 1
 pimc_start_trick_defender = 1
+pimc_stop_trick_declarer = 13
+pimc_stop_trick_defender = 13
 # Extract hcp from samples and use as input to PIMC
 pimc_constraints = True
 # On every trick create new constraints based on samples. If false only do it, when PIMC kicks in
