--- a/src/config/GIB-BBO-NNTrust.conf
+++ b/src/config/GIB-BBO-NNTrust.conf
@@ -153,6 +153,8 @@ min_sample_hands_play = 20
 min_sample_hands_play_bad = 12
 # Number of samples we will generate to find sample_hands_play
 sample_boards_for_play = 5000
+# If number of unknown cards is less than this we will not sample but just generate all combinations
+max_unknown_cards_for_sampling = 14
 # Should possible claim be calculated
 claim = True
 # Use bidding info for sampling during play and bidding
@@ -173,7 +175,7 @@ use_real_imp_or_mp = True
 draw_trump_reward = 0.05
 draw_trump_penalty = 0.1
 # Reward play if score is higher than this
-play_reward_threshold_NN = 0.8
+play_reward_threshold_NN = -1
 
 # When 3 cards left we check if any of the remaing card should have been played earlier for each sample. If so we reduce probability
 check_remaining_cards = True
@@ -194,6 +196,8 @@ pimc_wait = 3
 # When should PIMC kick in. PIMC is best with few cards unknown, but is used as a second opinion to BENs Double dummy
 pimc_start_trick_declarer = 1
 pimc_start_trick_defender = 1
+pimc_stop_trick_declarer = 13
+pimc_stop_trick_defender = 13
 # Extract hcp from samples and use as input to PIMC
 pimc_constraints = True
 # On every trick create new constraints based on samples. If false only do it, when PIMC kicks in
