--- a/src/config/GIB-BBO-NoPimc.conf
+++ b/src/config/GIB-BBO-NoPimc.conf
@@ -153,6 +153,8 @@ min_sample_hands_play = 20
 min_sample_hands_play_bad = 12
 # Number of samples we will generate to find sample_hands_play
 sample_boards_for_play = 5000
+# If number of unknown cards is less than this we will not sample but just generate all combinations
+max_unknown_cards_for_sampling = 14
 # Should possible claim be calculated
 claim = True
 # Use bidding info for sampling during play and bidding
@@ -172,9 +174,8 @@ use_real_imp_or_mp = True
 # The reward is low as it is only useable if more cards with the same score
 draw_trump_reward = 0.05
 draw_trump_penalty = 0.1
-# Reward play if score is higher than this
+# Reward play if score is higher than this. Setting to -1 disable the check
 play_reward_threshold_NN = -1
-
 # When 3 cards left we check if any of the remaing card should have been played earlier for each sample. If so we reduce probability
 check_remaining_cards = True
 # Probability for discards with each sample
@@ -187,11 +188,15 @@ pimc_verbose = False
 pimc_use_declaring = False
 pimc_use_fusion_strategy = False
 pimc_use_defending = False
+# Use PIMC when discarding
+pimc_use_discarding = False
 # Max wait time for results from PIMC in seconds
 pimc_wait = 3
 # When should PIMC kick in. PIMC is best with few cards unknown, but is used as a second opinion to BENs Double dummy
 pimc_start_trick_declarer = 1
 pimc_start_trick_defender = 1
+pimc_stop_trick_declarer = 13
+pimc_stop_trick_defender = 13
 # Extract hcp from samples and use as input to PIMC
 pimc_constraints = True
 # On every trick create new constraints based on samples. If false only do it, when PIMC kicks in
