--- a/src/config/GIB-BBO.conf
+++ b/src/config/GIB-BBO.conf
@@ -153,6 +153,8 @@ min_sample_hands_play = 20
 min_sample_hands_play_bad = 12
 # Number of samples we will generate to find sample_hands_play
 sample_boards_for_play = 5000
+# If number of unknown cards is less than this we will not sample but just generate all combinations
+max_unknown_cards_for_sampling = 14
 # Should possible claim be calculated
 claim = True
 # Use bidding info for sampling during play and bidding
@@ -193,6 +195,8 @@ pimc_wait = 3
 # When should PIMC kick in. PIMC is best with few cards unknown, but is used as a second opinion to BENs Double dummy
 pimc_start_trick_declarer = 1
 pimc_start_trick_defender = 1
+pimc_stop_trick_declarer = 8
+pimc_stop_trick_defender = 8
 # Extract hcp from samples and use as input to PIMC
 pimc_constraints = True
 # On every trick create new constraints based on samples. If false only do it, when PIMC kicks in
@@ -225,6 +229,8 @@ pimc_margin_suit = 1
 pimc_margin_hcp = 3
 pimc_margin_suit_bad_samples = 2
 pimc_margin_hcp_bad_samples = 5
+
+[alphamju]
 
 [sampling]
 # When sampling we use bidding_info as a guide, and these control how to adjust bidding_info after a card given to a hand
