--- a/src/config/Robots/speed_TF2.conf
+++ b/src/config/Robots/speed_TF2.conf
@@ -131,6 +131,8 @@ pimc_wait = 3
 # When should PIMC kick in
 pimc_start_trick_declarer = 3
 pimc_start_trick_defender = 6
+pimc_stop_trick_declarer = 10
+pimc_stop_trick_defender = 10
 # Extract hcp from samples and use as input to PIMC
 pimc_constraints = True
 # On every trick create new constraints based on samples. If false only do it, when PIMC kicks in
