--- a/src/config/TF1.x/0.20.conf
+++ b/src/config/TF1.x/0.20.conf
@@ -75,6 +75,8 @@ sample_hands_play = 100
 min_sample_hands_play = 20
 # Number of samples we will generate to find sample_hands_play
 sample_boards_for_play = 5000
+# If number of unknown cards is less than this we will not sample but just generate all combinations
+max_unknown_cards_for_sampling = 14
 # Should possible claim be calculated
 claim = False
 
