--- a/src/config/TF1.x/SAYC.conf
+++ b/src/config/TF1.x/SAYC.conf
@@ -119,6 +119,8 @@ min_sample_hands_play = 10
 min_sample_hands_play_bad = 12
 # Number of samples we will generate to find sample_hands_play
 sample_boards_for_play = 5000
+# If number of unknown cards is less than this we will not sample but just generate all combinations
+max_unknown_cards_for_sampling = 14
 # Should possible claim be calculated
 claim = True
 # Use bidding info during play
@@ -145,6 +147,8 @@ pimc_wait = 3
 # When should PIMC kick in
 pimc_start_trick_declarer = 4
 pimc_start_trick_defender = 8
+pimc_stop_trick_declarer = 13
+pimc_stop_trick_defender = 13
 # Extract hcp from samples and use as input to PIMC
 pimc_constraints = True
 # On every trick create new constraints based on samples. If false only do it, when PIMC kicks in
