--- a/src/config/jacksayc.conf
+++ b/src/config/jacksayc.conf
@@ -146,6 +146,8 @@ pimc_wait = 5
 # When should PIMC kick in
 pimc_start_trick_declarer = 2
 pimc_start_trick_defender = 5
+pimc_stop_trick_declarer = 13
+pimc_stop_trick_defender = 13
 # Extract hcp from samples and use as input to PIMC
 pimc_constraints = True
 # On every trick create new constraints based on samples. If false only do it, when PIMC kicks in
