Only adjust suits in NT

--- a/src/config/GIB-BBO.conf
+++ b/src/config/GIB-BBO.conf
@@ -101,7 +101,7 @@ adjust_min2_by = 200
 # Adjustment above is in points, so we need to translate it to some kind of MP or Imp
 factor_to_translate_to_mp = 10
 factor_to_translate_to_imp = 25
-# Try to adjust the suit to play based on evaluation of the suit
+# Try to adjust the suit to play based on evaluation of the suit, only for NT
 use_suit_adjust = True
 
 [lead]
