--- a/src/config/GIB-BBO.conf
+++ b/src/config/GIB-BBO.conf
@@ -231,6 +231,8 @@ pimc_margin_suit_bad_samples = 2
 pimc_margin_hcp_bad_samples = 5
 
 [alphamju]
+alphamju_declaring = False
+alphamju_defending = False
 
 [sampling]
 # When sampling we use bidding_info as a guide, and these control how to adjust bidding_info after a card given to a hand
