--- a/src/config/default.conf
+++ b/src/config/default.conf
@@ -101,7 +101,7 @@ adjust_min2_by = 200
 # Adjustment above is in points, so we need to translate it to some kind of MP or Imp
 factor_to_translate_to_mp = 10
 factor_to_translate_to_imp = 25
-# Try to adjust the suit to play based on evaluation of the suit
+# Try to adjust the suit to play based on evaluation of the suit, only for NT
 use_suit_adjust = True
 
 [lead]
@@ -195,8 +195,8 @@ pimc_wait = 3
 # When should PIMC kick in. PIMC is best with few cards unknown, but is used as a second opinion to BENs Double dummy
 pimc_start_trick_declarer = 1
 pimc_start_trick_defender = 1
-pimc_stop_trick_declarer = 13
-pimc_stop_trick_defender = 13
+pimc_stop_trick_declarer = 8
+pimc_stop_trick_defender = 8
 # Extract hcp from samples and use as input to PIMC
 pimc_constraints = True
 # On every trick create new constraints based on samples. If false only do it, when PIMC kicks in
@@ -229,6 +229,10 @@ pimc_margin_suit = 1
 pimc_margin_hcp = 3
 pimc_margin_suit_bad_samples = 2
 pimc_margin_hcp_bad_samples = 5
+
+[alphamju]
+alphamju_declaring = True
+alphamju_defending = False
 
 [sampling]
 # When sampling we use bidding_info as a guide, and these control how to adjust bidding_info after a card given to a hand
