--- a/src/config/GIB-BBO.conf
+++ b/src/config/GIB-BBO.conf
@@ -91,7 +91,7 @@ adjust_X_remove = 25
 # When bidding in the passout situation, we change the expected score
 adjust_passout = -100
 # When bidding in the passout and going negative, assume we are being doubled, so multiply the score by this
-adjust_passout_negative = 0.1
+adjust_passout_negative = 0.5
 # If we get some very low scores from the NN, then adjust by this
 # Both will be tested, so a very low score will get both adjustments
 adjust_min1 = 0.002
@@ -103,6 +103,10 @@ factor_to_translate_to_mp = 10
 factor_to_translate_to_imp = 25
 # Try to adjust the suit to play based on evaluation of the suit, only for NT
 use_suit_adjust = True
+# Reward for leading partners suit
+reward_lead_partner_suit = 1
+# Penalty for leading trump with singleton K could be added
+trump_lead_penalty = [0.2, 0.2, 0.5, 0.2]
 
 [lead]
 # Neural network for suggesting opening lead
@@ -176,8 +180,8 @@ draw_trump_reward = 0.05
 draw_trump_penalty = 0.1
 # Reward play if score is higher than this. Setting to -1 disable the check
 play_reward_threshold_NN = 0.8
-# When 3 cards left we check if any of the remaing card should have been played earlier for each sample. If so we reduce probability
-check_remaining_cards = True
+# At this trick we check if any of the remaing card should have been played earlier for each sample. If so we reduce probability
+check_remaining_cards = 5
 # Probability for discards with each sample
 check_discard = True
 
@@ -231,6 +235,7 @@ pimc_margin_suit_bad_samples = 2
 pimc_margin_hcp_bad_samples = 5
 
 [alphamju]
+# At this trick BEN can use AlphaMju (that is slow) if needed
 alphamju_declaring = False
 alphamju_defending = False
 
