--- a/src/config/Robots/speed_TF2.conf
+++ b/src/config/Robots/speed_TF2.conf
@@ -53,8 +53,9 @@ adjust_XX = 200
 adjust_X = 100
 # When bidding in the passout situation, we change the expected score
 adjust_passout = -100
-# When bidding in the passout and going negative, assume we are being doubled, so multiply the score by this
-adjust_passout_negative = 3
+# When bidding in the passout and going negative add this multiplyed to the score as and adjustment
+adjust_passout_negative = 0.5
+
 # If we get some very low scores from the NN, then adjust by this
 # Both will be tested, so a very low score will get both adjustments
 adjust_min1 = 0.002
