--- a/src/config/BBA-21GF.conf
+++ b/src/config/BBA-21GF.conf
@@ -58,7 +58,7 @@ max_samples_checked = 20
 # Minimum gain for making a rescue bid
 min_rescue_reward = 250
 # Max expected score to evaluate rescue bid
-max_estimated_score = 300
+max_estimated_score = 1430
 # If samples has bidding below this we will not use it for rescue bid
 min_bidding_trust_for_sample_when_rescue = 0.55
 # Alert implemented in bidding model
@@ -113,6 +113,8 @@ lead_from_pips_nt = 24
 lead_from_pips_suit = 135
 # use real calcualtion or just tricks
 use_real_imp_or_mp_opening_lead = True
+# Validate opening lead against lead convention
+lead_convention = False
 
 [eval]
 # Model for finding single dummy estimates provided an opening lead
