--- a/src/config/GIB-BBO.conf
+++ b/src/config/GIB-BBO.conf
@@ -65,7 +65,7 @@ max_samples_checked = 20
 # Minimum gain for making a rescue bid
 min_rescue_reward = 250
 # Max expected score to evaluate rescue bid
-max_estimated_score = 300
+max_estimated_score = 1430
 # If samples has bidding below this we will not use it for rescue bid
 min_bidding_trust_for_sample_when_rescue = 0.55
 # Alert implemented in bidding model
@@ -104,7 +104,7 @@ factor_to_translate_to_imp = 25
 # Try to adjust the suit to play based on evaluation of the suit, only for NT
 use_suit_adjust = True
 # Reward for leading partners suit
-reward_lead_partner_suit = 1
+reward_lead_partner_suit = 0.5
 # Penalty for leading trump with singleton K could be added
 trump_lead_penalty = [0.2, 0.2, 0.5, 0.2]
 
@@ -125,6 +125,8 @@ lead_from_pips_nt = 24
 lead_from_pips_suit = 135
 # use real calcualtion or just tricks
 use_real_imp_or_mp_opening_lead = True
+# Validate opening lead against lead convention
+lead_convention = True
 
 [eval]
 # Model for finding single dummy estimates provided an opening lead
@@ -197,10 +199,10 @@ pimc_use_discarding = False
 # Max wait time for results from PIMC in seconds
 pimc_wait = 3
 # When should PIMC kick in. PIMC is best with few cards unknown, but is used as a second opinion to BENs Double dummy
-pimc_start_trick_declarer = 1
-pimc_start_trick_defender = 1
-pimc_stop_trick_declarer = 8
-pimc_stop_trick_defender = 8
+pimc_start_trick_declarer = 5
+pimc_start_trick_defender = 5
+pimc_stop_trick_declarer = 9
+pimc_stop_trick_defender = 9
 # Extract hcp from samples and use as input to PIMC
 pimc_constraints = True
 # On every trick create new constraints based on samples. If false only do it, when PIMC kicks in
