--- a/src/config/MvsM/BEN-SAYC-WBridge5_5959T (1).conf
+++ b/src/config/MvsM/BEN-SAYC-WBridge5_5959T (1).conf
@@ -121,6 +121,8 @@ lead_from_pips_nt = 24
 lead_from_pips_suit = 135
 # use real calcualtion or just tricks
 use_real_imp_or_mp_opening_lead = True
+# Validate opening lead against lead convention
+lead_convention = False
 
 [eval]
 # Model for finding single dummy estimates provided an opening lead
@@ -177,7 +179,7 @@ draw_trump_penalty = 0.1
 # Reward play if score is higher than this. Setting to -1 disable the check
 play_reward_threshold_NN = 0.8
 # When 3 cards left we check if any of the remaing card should have been played earlier for each sample. If so we reduce probability
-check_remaining_cards = True
+check_remaining_cards = 5
 # Probability for discards with each sample
 check_discard = True
 
