Reduced trust in NN for bad samples - removed it at the 5-level Handle multiple equal cards from SuitC Updated configuration for BEN-21GF/BEN-Sayc Removed some impossible bids from the rescue bidder Reduced trust in NN for play

--- a/src/config/BEN-21GF.conf
+++ b/src/config/BEN-21GF.conf
@@ -34,8 +34,6 @@ trick = models/TF2models/Tricks_2024-12-09-E50.keras
 
 [bidding]
 bidder = models/TF2models/BEN-21GF-8728_2025-03-02-E52.keras
-# only used for sampling
-opponent = models/TF2models/BEN-21GF-8728_2025-03-02-E52.keras
 info =  models/TF2models/BEN-21GF-Info-8728_2025-03-02-E50.keras
 # If there are multiple bids over this threshold make a simulation for the bids, using an array we can lower the trust the more we bid
 search_threshold = [0.10, 0.07, 0.06, 0.05, 0.04, 0.03, 0.03]
@@ -90,9 +88,8 @@ adjust_X = 100
 adjust_X_remove = 25
 # When bidding in the passout situation, we change the expected score
 adjust_passout = -100
-# When bidding in the passout and going negative add this multiplyed to the score as and adjustment
+# When bidding in the passout and going negative, assume we are being doubled, so multiply the score by this
 adjust_passout_negative = 0.5
-
 # If we get some very low scores from the NN, then adjust by this
 # Both will be tested, so a very low score will get both adjustments
 adjust_min1 = 0.002
@@ -102,7 +99,7 @@ adjust_min2_by = 200
 # Adjustment above is in points, so we need to translate it to some kind of MP or Imp
 factor_to_translate_to_mp = 10
 factor_to_translate_to_imp = 25
-# Try to adjust the suit to play based on evaluation of the suit
+# Try to adjust the suit to play based on evaluation of the suit, only for NT
 use_suit_adjust = True
 # Reward for leading partners suit
 reward_lead_partner_suit = 0.5
@@ -127,7 +124,7 @@ lead_from_pips_suit = 135
 # use real calcualtion or just tricks
 use_real_imp_or_mp_opening_lead = True
 # Validate opening lead against lead convention
-lead_convention = False
+lead_convention = True
 
 [eval]
 # Model for finding single dummy estimates provided an opening lead
@@ -200,10 +197,10 @@ pimc_use_discarding = False
 # Max wait time for results from PIMC in seconds
 pimc_wait = 3
 # When should PIMC kick in. PIMC is best with few cards unknown, but is used as a second opinion to BENs Double dummy
-pimc_start_trick_declarer = 1
-pimc_start_trick_defender = 1
-pimc_stop_trick_declarer = 13
-pimc_stop_trick_defender = 13
+pimc_start_trick_declarer = 5
+pimc_start_trick_defender = 5
+pimc_stop_trick_declarer = 9
+pimc_stop_trick_defender = 9
 # Extract hcp from samples and use as input to PIMC
 pimc_constraints = True
 # On every trick create new constraints based on samples. If false only do it, when PIMC kicks in
@@ -237,6 +234,11 @@ pimc_margin_hcp = 3
 pimc_margin_suit_bad_samples = 2
 pimc_margin_hcp_bad_samples = 5
 
+[alphamju]
+# At this trick BEN can use AlphaMju (that is slow) if needed
+alphamju_declaring = False
+alphamju_defending = False
+
 [sampling]
 # When sampling we use bidding_info as a guide, and these control how to adjust bidding_info after a card given to a hand
 # Multiplied to the hcp-value of the card, the higher value there more the samples will have the average hcp's
@@ -265,7 +267,7 @@ lead_accept_threshold = 0.10
 # Setting it to high will reduce the samples and thus getting bad samples
 lead_accept_threshold_partner_trust = 0.10
 
-# Filter to remove hands, where we do not trust the bidding. Used when sampling hands during bidding
+# Filter to remove hands, where we do not trust the bidding. Used when sampling hands during bidding and opening lead
 #use_distance = False
 #bidding_threshold_sampling = 0.25
 #bid_accept_threshold_bidding = 0.20
@@ -287,7 +289,7 @@ play_accept_threshold_partner = 0.1
 play_accept_threshold_declarer = 0.1
 min_play_accept_threshold_samples = 10
 # If we dont find enough samples, then include down to this threshold. Used during play
-bid_extend_play_threshold = 0.10
+bid_extend_play_threshold = 0.01
 # Number hands where we will calculate scores for when bidding
 sample_hands_auction = 200
 # The number of hands we will generate to find sample_hands_auction. Estimated cost pr. sample is 4ms
@@ -309,6 +311,6 @@ sample_hands_opening_lead = 200
 # Max number of samples to include when reviewing a board
 sample_hands_for_review = 20
 # If probability for a bid is below this, then drop the sample
-exclude_samples = 0.005
+exclude_samples = 0.01
 # Skip last bidding round to find samples, if we did not find the minimum needed. We will only try to find 25% samples
 sample_previous_round_if_needed = True
