Renaned some files Fixed error witn RKC-response Update UI for recorded board Updated challenge-results Added explanation for rescue bid

--- a/src/config/MvsM/BEN-SAYC-WBridge5.conf
+++ b/src/config/MvsM/BEN-SAYC-WBridge5.conf
@@ -103,7 +103,7 @@ adjust_min2_by = 200
 # Adjustment above is in points, so we need to translate it to some kind of MP or Imp
 factor_to_translate_to_mp = 10
 factor_to_translate_to_imp = 25
-# Try to adjust the suit to play based on evaluation of the suit
+# Try to adjust the suit to play based on evaluation of the suit, only for NT
 use_suit_adjust = True
 # Reward for leading partners suit
 reward_lead_partner_suit = 0.5
@@ -233,7 +233,6 @@ pimc_ben_dd_defending_weight = 0.25
 pimc_after_preempt = True
 pimc_after_preempt_weight = 0.75
 # Use a priori probabilities
-
 # Setting this to true will send all played card to PIMC. that will give weight to each sample, when creating average tricks
 # and when calculating chance for making/defeating the contract
 pimc_apriori_probability = False
@@ -242,6 +241,11 @@ pimc_margin_suit = 1
 pimc_margin_hcp = 3
 pimc_margin_suit_bad_samples = 2
 pimc_margin_hcp_bad_samples = 5
+
+[alphamju]
+# At this trick BEN can use AlphaMju (that is slow) if needed
+alphamju_declaring = False
+alphamju_defending = False
 
 [sampling]
 # When sampling we use bidding_info as a guide, and these control how to adjust bidding_info after a card given to a hand
