--- a/src/config/Robots/RoboSayc.conf
+++ b/src/config/Robots/RoboSayc.conf
@@ -19,8 +19,8 @@ use_bba = False
 # Instead of the neural network, check BBA if it is RKC and get the correct bid from BBA
 use_bba_to_count_aces = True
 # Use 2/1 in BBA
-bba_our_cc = BBA/CC/RoboSayc.bbsa
-bba_their_cc = BBA/CC/RoboSayc.bbsa
+bba_our_cc = BBA/CC/Robo-Sayc.bbsa
+bba_their_cc = BBA/CC/Robo-Sayc.bbsa
 # Playing matchpoint? Otherwise it is teams
 matchpoint = False
 # Do not print warnings about bad models, training etc in the output
@@ -31,10 +31,10 @@ contract = models/TF2models/Contract_2024-12-09-E50.keras
 trick = models/TF2models/Tricks_2024-12-09-E50.keras
 
 [bidding]
-bidder = models/TF2models/RoboSayc-8710_2024-11-24-E31.keras
+bidder = models/TF2models/Robo-Sayc-8710_2024-11-24-E31.keras
 # only used for sampling
-opponent = models/TF2models/RoboSayc-8710_2024-11-24-E31.keras
-info =  models/TF2models/RoboSaycInfo-8710_2024-11-24-E100.keras
+opponent = models/TF2models/Robo-Sayc-8710_2024-11-24-E31.keras
+info =  models/TF2models/Robo-SaycInfo-8710_2024-11-24-E100.keras
 # If there are multiple bids over this threshold make a simulation for the bids, using an array we can lower the trust the more we bid
 search_threshold = [0.10, 0.07, 0.06, 0.05, 0.04, 0.03, 0.03]
 # Adjust hcp - upvote ace and T
