--- a/src/config/opponent/Q-Plus.conf
+++ b/src/config/opponent/Q-Plus.conf
@@ -4,11 +4,11 @@ model_version = 3
 
 # Small cards (pips) are grouped, so when bidding we have AKQJTx
 n_cards_bidding = 24
-bba_their_cc = BBA/CC/Q-Plus 21GF.bbsa
+bba_their_cc = BBA/CC/QPlus-21GF.bbsa
 
 [bidding]
 # only used for sampling
-opponent = models/TF2models/Q-Plus 21GF-8712_2024-11-28-E25.keras
+opponent = models/TF2models/QPlus-21GF-8712_2024-11-28-E25.keras
 
 [lead]
 # Opening lead agreement (random, attitude, 135 or 24)
