--- a/src/config/opponent/Robo.conf
+++ b/src/config/opponent/Robo.conf
@@ -4,11 +4,11 @@ model_version = 3
 
 # Small cards (pips) are grouped, so when bidding we have AKQJTx
 n_cards_bidding = 24
-bba_their_cc = BBA/CC/RoboSayc.bbsa
+bba_their_cc = BBA/CC/Robo-Sayc.bbsa
 
 [bidding]
 # only used for sampling
-opponent = models/TF2models/RoboSayc-8710_2024-11-24-E31.keras
+opponent = models/TF2models/Robo-Sayc-8710_2024-11-24-E31.keras
 
 [lead]
 # Opening lead agreement (random, attitude, 135 or 24)
