--- a/src/config/BEN-21GF.conf
+++ b/src/config/BEN-21GF.conf
@@ -38,7 +38,7 @@ info =  models/TF2models/BEN-21GF-Info-8728_2025-03-02-E50.keras
 # If there are multiple bids over this threshold make a simulation for the bids, using an array we can lower the trust the more we bid
 search_threshold = [0.10, 0.07, 0.06, 0.05, 0.04, 0.03, 0.03]
 # Adjust hcp - upvote ace and T
-adjust_hcp = False
+adjust_hcp = True
 # If there is bid above this threshold, make that bid ignoring other bids
 no_search_threshold = 1
 # Evaluate min_passout_candidates bids if auction longer than this. Setting to -1 will disable
@@ -200,8 +200,8 @@ pimc_use_discarding = False
 # Max wait time for results from PIMC in seconds
 pimc_wait = 3
 # When should PIMC kick in. PIMC is best with few cards unknown, but is used as a second opinion to BENs Double dummy
-pimc_start_trick_declarer = 5
-pimc_start_trick_defender = 5
+pimc_start_trick_declarer = 1
+pimc_start_trick_defender = 1
 pimc_stop_trick_declarer = 9
 pimc_stop_trick_defender = 9
 # Extract hcp from samples and use as input to PIMC
