--- a/src/config/MvsM/BEN-21GF-WBridge5.conf
+++ b/src/config/MvsM/BEN-21GF-WBridge5.conf
@@ -92,9 +92,8 @@ adjust_X = 100
 adjust_X_remove = 25
 # When bidding in the passout situation, we change the expected score
 adjust_passout = -100
-# When bidding in the passout and going negative add this multiplyed to the score as and adjustment
+# When bidding in the passout and going negative, assume we are being doubled, so multiply the score by this
 adjust_passout_negative = 0.5
-
 # If we get some very low scores from the NN, then adjust by this
 # Both will be tested, so a very low score will get both adjustments
 adjust_min1 = 0.002
@@ -104,7 +103,7 @@ adjust_min2_by = 200
 # Adjustment above is in points, so we need to translate it to some kind of MP or Imp
 factor_to_translate_to_mp = 10
 factor_to_translate_to_imp = 25
-# Try to adjust the suit to play based on evaluation of the suit
+# Try to adjust the suit to play based on evaluation of the suit, only for NT
 use_suit_adjust = True
 # Reward for leading partners suit
 reward_lead_partner_suit = 0.5
@@ -129,7 +128,7 @@ lead_from_pips_suit = 135
 # use real calcualtion or just tricks
 use_real_imp_or_mp_opening_lead = True
 # Validate opening lead against lead convention
-lead_convention = False
+lead_convention = True
 
 [eval]
 # Model for finding single dummy estimates provided an opening lead
@@ -205,8 +204,8 @@ pimc_wait = 3
 # When should PIMC kick in. PIMC is best with few cards unknown, but is used as a second opinion to BENs Double dummy
 pimc_start_trick_declarer = 1
 pimc_start_trick_defender = 1
-pimc_stop_trick_declarer = 13
-pimc_stop_trick_defender = 13
+pimc_stop_trick_declarer = 9
+pimc_stop_trick_defender = 9
 # Extract hcp from samples and use as input to PIMC
 pimc_constraints = True
 # On every trick create new constraints based on samples. If false only do it, when PIMC kicks in
@@ -234,7 +233,6 @@ pimc_ben_dd_defending_weight = 0.25
 pimc_after_preempt = True
 pimc_after_preempt_weight = 0.75
 # Use a priori probabilities
-
 # Setting this to true will send all played card to PIMC. that will give weight to each sample, when creating average tricks
 # and when calculating chance for making/defeating the contract
 pimc_apriori_probability = False
@@ -243,6 +241,11 @@ pimc_margin_suit = 1
 pimc_margin_hcp = 3
 pimc_margin_suit_bad_samples = 2
 pimc_margin_hcp_bad_samples = 5
+
+[alphamju]
+# At this trick BEN can use AlphaMju (that is slow) if needed
+alphamju_declaring = False
+alphamju_defending = False
 
 [sampling]
 # When sampling we use bidding_info as a guide, and these control how to adjust bidding_info after a card given to a hand
@@ -272,7 +275,7 @@ lead_accept_threshold = 0.10
 # Setting it to high will reduce the samples and thus getting bad samples
 lead_accept_threshold_partner_trust = 0.10
 
-# Filter to remove hands, where we do not trust the bidding. Used when sampling hands during bidding
+# Filter to remove hands, where we do not trust the bidding. Used when sampling hands during bidding and opening lead
 #use_distance = False
 #bidding_threshold_sampling = 0.25
 #bid_accept_threshold_bidding = 0.20
@@ -291,10 +294,10 @@ bid_accept_play_threshold = 0.40
 play_accept_threshold_opponents = 0.03
 play_accept_threshold_partner = 0.1
 # How much do we trust declares play
-play_accept_threshold_declarer = 0.2
+play_accept_threshold_declarer = 0.1
 min_play_accept_threshold_samples = 10
 # If we dont find enough samples, then include down to this threshold. Used during play
-bid_extend_play_threshold = 0.10
+bid_extend_play_threshold = 0.01
 # Number hands where we will calculate scores for when bidding
 sample_hands_auction = 200
 # The number of hands we will generate to find sample_hands_auction. Estimated cost pr. sample is 4ms
@@ -316,6 +319,6 @@ sample_hands_opening_lead = 200
 # Max number of samples to include when reviewing a board
 sample_hands_for_review = 20
 # If probability for a bid is below this, then drop the sample
-exclude_samples = 0.005
+exclude_samples = 0.01
 # Skip last bidding round to find samples, if we did not find the minimum needed. We will only try to find 25% samples
 sample_previous_round_if_needed = True
