--- a/src/config/MvsM/BEN-Robo.conf
+++ b/src/config/MvsM/BEN-Robo.conf
@@ -22,7 +22,7 @@ use_bba_rollout = True
 use_bba_to_count_aces = True
 # Use 2/1 in BBA
 bba_our_cc = BBA/CC/BEN-21GF.bbsa
-bba_their_cc = BBA/CC/RoboSayc.bbsa
+bba_their_cc = BBA/CC/Robo-Sayc.bbsa
 # Playing matchpoint? Otherwise it is teams
 matchpoint = False
 # Do not print warnings about bad models, training etc in the output
@@ -35,7 +35,7 @@ trick = models/TF2models/Tricks_2024-12-09-E50.keras
 [bidding]
 bidder = models/TF2models/BEN-21GF-8728_2025-03-02-E52.keras
 # only used for sampling
-opponent = models/TF2models/RoboSayc-8710_2024-11-24-E31.keras
+opponent = models/TF2models/Robo-Sayc-8710_2024-11-24-E31.keras
 info =  models/TF2models/BEN-21GF-Info-8728_2025-03-02-E50.keras
 # If there are multiple bids over this threshold make a simulation for the bids, using an array we can lower the trust the more we bid
 search_threshold = [0.10, 0.07, 0.06, 0.05, 0.04, 0.03, 0.03]
