--- a/src/config/Robots/Q-Plus 21GF.conf
+++ b/src/config/Robots/Q-Plus 21GF.conf
@@ -1,5 +1,5 @@
 [models]
-name = Q-Plus 21GF
+name = QPlus-21GF
 # Model version 1 drops state for bidding, and introduce different system for NS and EW
 # Model version 2 includes 4 bids when making the lookup
 model_version = 3
@@ -19,8 +19,8 @@ use_bba = False
 # Instead of the neural network, check BBA if it is RKC and get the correct bid from BBA
 use_bba_to_count_aces = True
 # Use 2/1 in BBA
-bba_our_cc = BBA/CC/Q-Plus 21GF.bbsa
-bba_their_cc = BBA/CC/Q-Plus 21GF.bbsa
+bba_our_cc = BBA/CC/QPlus-21GF.bbsa
+bba_their_cc = BBA/CC/QPlus-21GF.bbsa
 # Playing matchpoint? Otherwise it is teams
 matchpoint = False
 # Do not print warnings about bad models, training etc in the output
@@ -31,10 +31,10 @@ contract = models/TF2models/Contract_2024-12-09-E50.keras
 trick = models/TF2models/Tricks_2024-12-09-E50.keras
 
 [bidding]
-bidder = models/TF2models/Q-Plus 21GF-8712_2024-11-28-E25.keras
+bidder = models/TF2models/QPlus-21GF-8712_2024-11-28-E25.keras
 # only used for sampling
-opponent = models/TF2models/Q-Plus 21GF-8712_2024-11-28-E25.keras
-info = models/TF2models/Q-Plus 21GFInfo-8712_2024-11-28-E25.keras
+opponent = models/TF2models/QPlus-21GF-8712_2024-11-28-E25.keras
+info = models/TF2models/QPlus-21GFInfo-8712_2024-11-28-E25.keras
 # If there are multiple bids over this threshold make a simulation for the bids, using an array we can lower the trust the more we bid
 search_threshold = [0.10, 0.07, 0.06, 0.05, 0.04, 0.03, 0.03]
 # Adjust hcp - upvote ace and T
