Climing wrong number of tricks adjusted reward for drawing trump Fixed som emissing explanations Do not rescue if bid from BBA Better output from challenges

--- a/src/config/BEN-21GF.conf
+++ b/src/config/BEN-21GF.conf
@@ -38,7 +38,7 @@ info =  models/TF2models/BEN-21GF-Info-8728_2025-03-02-E50.keras
 # If there are multiple bids over this threshold make a simulation for the bids, using an array we can lower the trust the more we bid
 search_threshold = [0.10, 0.07, 0.06, 0.05, 0.04, 0.03, 0.03]
 # Adjust hcp - upvote ace and T
-adjust_hcp = True
+adjust_hcp = False
 # If there is bid above this threshold, make that bid ignoring other bids
 no_search_threshold = 1
 # Evaluate min_passout_candidates bids if auction longer than this. Setting to -1 will disable
