--- a/src/config/BEN-21GF.conf
+++ b/src/config/BEN-21GF.conf
@@ -17,6 +17,7 @@ EW = 1
 # If using BBA the following NS and EW must match BBA's systems (0 =2/1, 1=SAYC, 2=WJ, 3=PC, 4=Acol)
 use_bba = False
 consult_bba = True
+bba_trust = 0.5
 use_bba_rollout = True
 # Instead of the neural network, check BBA if it is RKC and get the correct bid from BBA
 use_bba_to_count_aces = True
@@ -57,6 +58,7 @@ use_biddingquality = True
 # For very long bidding sequnces we can't find decent samples, so do not make quality check
 no_biddingquality_after_bid_count = 12
 # Upvote the samples that matches the bidding best - used when double dummy results are calculated during play
+# Will be ignored if bidding quality for samples are to low
 use_probability = True
 # Before the final pass validate the contract with a neural network
 check_final_contract = True
