--- a/src/config/GIB-BBO-AlphaMju.conf
+++ b/src/config/GIB-BBO-AlphaMju.conf
@@ -247,6 +247,8 @@ pimc_margin_hcp_bad_samples = 5
 # At this trick BEN can use AlphaMju (that is slow) if needed
 alphamju_declaring = True
 alphamju_defending = False
+# Trick we can use alphamju max_unknown_cards_for_sampling must be 2_ remaining tricks
+alphamju_trick = 6
 
 [sampling]
 # When sampling we use bidding_info as a guide, and these control how to adjust bidding_info after a card given to a hand
