--- a/src/config/Robots/speed_TF2.conf
+++ b/src/config/Robots/speed_TF2.conf
@@ -4,7 +4,7 @@ name = speed (TF2)
 # Model version 2 includes 4 bids when making the lookup
 model_version = 3
 # Small cards (pips) are grouped, so when bidding we have AKQJTx
-n_cards_bidding = 32
+n_cards_bidding = 24
 # During play we have AKQJT98x
 n_cards_play = 32
 
@@ -27,10 +27,10 @@ trick = models/TF2models/Tricks_2024-12-09-E50.keras
 
 [bidding]
 # Bidding model for both sides
-bidder = models/TF2models/GIB8638Rot_2024-08-28-E93.keras
+bidder = models/TF2models/GIB-BBO-8730_2025-04-19-E30.keras
 # Only used for generating samples
-opponent = models/TF2models/GIB8638_2024-08-28-E75.keras
-info = models/TF2models/GIB-Info_2024-07-18-E50.keras
+opponent = models/TF2models/GIB-BBO-8730_2025-04-19-E30.keras
+info = models/TF2models/GIB-BBOInfo-8730_2025-04-19-E30.keras
 # If there are multiple bids over this threshold make a simulation for the bids
 search_threshold = -1
 # Adjust hcp - upvote ace and T
@@ -38,7 +38,7 @@ adjust_hcp = False
 # If there is bid above this threshold, make that bid ignoring other bids
 no_search_threshold = 0.999
 # Alert implemented in bidding model
-alert_supported = True
+alert_supported = False
 
 [adjustments]
 # Are adjustments enabled
