--- a/src/config/BEN-21GF.conf
+++ b/src/config/BEN-21GF.conf
@@ -96,7 +96,7 @@ adjust_X = 100
 adjust_X_remove = 25
 # When bidding in the passout situation, we change the expected score
 adjust_passout = -100
-# When bidding in the passout and going negative add this multiplyed to the score as an adjustment
+# When bidding in the passout and going negative, assume we are being doubled, so multiply the score by this
 adjust_passout_negative = 0.5
 # If we get some very low scores from the NN, then adjust by this
 # Both will be tested, so a very low score will get both adjustments
@@ -187,9 +187,9 @@ use_real_imp_or_mp = True
 draw_trump_reward = 0.1
 draw_trump_penalty = 0.1
 # Reward play if NN score is higher than this. Setting to -1 disable the check. Adjustment is NN score * factor
-play_reward_threshold_NN = 0.8
-play_reward_threshold_NN_factor_IMP = 0.7
-play_reward_threshold_NN_factor_MP = 5
+play_reward_threshold_NN = 0.25
+play_reward_threshold_NN_factor_IMP = 0.2
+play_reward_threshold_NN_factor_MP = 2
 # At this trick we check if any of the remaing card should have been played earlier for each sample. If so we reduce probability
 check_remaining_cards = 5
 # Probability for discards with each sample
@@ -304,10 +304,10 @@ min_play_accept_threshold_samples = 10
 # If we dont find enough samples, then include down to this threshold. Used during play
 bid_extend_play_threshold = 0.01
 # Number hands where we will calculate scores for when bidding
-sample_hands_auction = 200
+sample_hands_auction = 50
 # The number of hands we will generate to find sample_hands_auction. Estimated cost pr. sample is 4ms
 # This is now a max as we generate blocks of sample_boards_for_auction_step hands
-sample_boards_for_auction = 30000
+sample_boards_for_auction = 20000
 sample_boards_for_auction_step = 2000
 # After each real bid we add 50% to the max samples. setting to zero disables
 increase_for_bid_count = 6
@@ -318,9 +318,9 @@ min_sample_hands_auction = 15
 # If we dont find enough samples, then include down to this threshold. Used during bidding
 bid_extend_bid_threshold = 0.01
 # How many boards should we sample to find the number of samples below
-sample_boards_for_auction_opening_lead = 20000
+sample_boards_for_auction_opening_lead = 10000
 # Number of samples made, when finding the opening lead
-sample_hands_opening_lead = 200
+sample_hands_opening_lead = 100
 # Max number of samples to include when reviewing a board
 sample_hands_for_review = 20
 # If probability for a bid is below this, then drop the sample
