--- a/src/config/GIB-BBO.conf
+++ b/src/config/GIB-BBO.conf
@@ -17,6 +17,7 @@ EW = 1
 # If using BBA the following NS and EW must match BBA's systems (0 =2/1, 1=SAYC, 2=WJ, 3=PC, 4=Acol)
 use_bba = False
 consult_bba = True
+bba_trust = 0.2
 use_bba_rollout = True
 # Instead of the neural network, check BBA if it is RKC and get the correct bid from BBA
 use_bba_to_count_aces = True
@@ -83,7 +84,8 @@ use_adjustment = True
 adjust_NN = 60
 # The score from NN is multiplied to this and added to expected score, when undisturbed, we trust the NN more
 adjust_NN_undisturbed = 200
-# If it was difficult to find samples we increase the trust in the NN. It is probably better to add more trust to BBA if available
+
+# If it was difficult to find samples we increase the trust in the NN
 adjust_NN_Few_Samples = 100
 # subtract this from expected score before XX (Double if vulnerable)
 adjust_XX = 200
@@ -185,11 +187,11 @@ use_real_imp_or_mp = True
 draw_trump_reward = 0.1
 draw_trump_penalty = 0.1
 # Reward play if NN score is higher than this. Setting to -1 disable the check. Adjustment is NN score * factor
-play_reward_threshold_NN = 0.8
-play_reward_threshold_NN_factor_IMP = 2
-play_reward_threshold_NN_factor_MP = 5
+play_reward_threshold_NN = 0.25
+play_reward_threshold_NN_factor_IMP = 0.2
+play_reward_threshold_NN_factor_MP = 2
 # At this trick we check if any of the remaing card should have been played earlier for each sample. If so we reduce probability
-check_remaining_cards = 2
+check_remaining_cards = 5
 # Probability for discards with each sample
 check_discard = True
 
@@ -205,8 +207,8 @@ pimc_use_discarding = False
 # Max wait time for results from PIMC in seconds
 pimc_wait = 3
 # When should PIMC kick in. PIMC is best with few cards unknown, but is used as a second opinion to BENs Double dummy
-pimc_start_trick_declarer = 5
-pimc_start_trick_defender = 5
+pimc_start_trick_declarer = 3
+pimc_start_trick_defender = 1
 pimc_stop_trick_declarer = 9
 pimc_stop_trick_defender = 9
 # Extract hcp from samples and use as input to PIMC
@@ -236,7 +238,6 @@ pimc_ben_dd_defending_weight = 0.25
 pimc_after_preempt = True
 pimc_after_preempt_weight = 0.75
 # Use a priori probabilities
-
 # Setting this to true will send all played card to PIMC. that will give weight to each sample, when creating average tricks
 # and when calculating chance for making/defeating the contract
 pimc_apriori_probability = False
@@ -303,10 +304,10 @@ min_play_accept_threshold_samples = 10
 # If we dont find enough samples, then include down to this threshold. Used during play
 bid_extend_play_threshold = 0.01
 # Number hands where we will calculate scores for when bidding
-sample_hands_auction = 200
+sample_hands_auction = 50
 # The number of hands we will generate to find sample_hands_auction. Estimated cost pr. sample is 4ms
 # This is now a max as we generate blocks of sample_boards_for_auction_step hands
-sample_boards_for_auction = 30000
+sample_boards_for_auction = 20000
 sample_boards_for_auction_step = 2000
 # After each real bid we add 50% to the max samples. setting to zero disables
 increase_for_bid_count = 6
@@ -317,9 +318,9 @@ min_sample_hands_auction = 15
 # If we dont find enough samples, then include down to this threshold. Used during bidding
 bid_extend_bid_threshold = 0.01
 # How many boards should we sample to find the number of samples below
-sample_boards_for_auction_opening_lead = 20000
+sample_boards_for_auction_opening_lead = 10000
 # Number of samples made, when finding the opening lead
-sample_hands_opening_lead = 200
+sample_hands_opening_lead = 100
 # Max number of samples to include when reviewing a board
 sample_hands_for_review = 20
 # If probability for a bid is below this, then drop the sample
