Added ACE as play engine

--- a/src/config/default.conf
+++ b/src/config/default.conf
@@ -248,6 +248,31 @@ pimc_margin_hcp = 3
 pimc_margin_suit_bad_samples = 2
 pimc_margin_hcp_bad_samples = 5
 
+[ace]
+# Setting this to false will suppress output from ACE, if true it will follow the global definition of verbose
+ace_verbose = False
+# Are we using ACE as declarer and/or defender?
+# ACE uses Brill.Ace library with Information-Set Search and strategy fusion mitigation
+ace_use_declaring = False
+ace_use_defending = False
+# Search duration in milliseconds
+ace_search_duration = 2000
+# Search depth (1-3)
+ace_search_depth = 2
+# Number of threads for ACE search
+ace_threads = 10
+# When should ACE kick in (trick number)
+ace_start_trick_declarer = 1
+ace_start_trick_defender = 1
+ace_stop_trick_declarer = 13
+ace_stop_trick_defender = 13
+# Combine ACE with BEN double dummy
+ace_ben_dd_declaring = False
+ace_ben_dd_defending = False
+# Weight for ACE when combining with BEN (0-1, higher = more trust in ACE)
+ace_ben_dd_declaring_weight = 0.5
+ace_ben_dd_defending_weight = 0.5
+
 [alphamju]
 alphamju_declaring = False
 alphamju_defending = False
